--- a/admin/scss/rexlive/rexbuilder-live/views/_block.scss
+++ b/admin/scss/rexlive/rexbuilder-live/views/_block.scss
@@ -16,8 +16,9 @@
   bottom: 0;
   left: 0;
   visibility: hidden;
-  outline: 1px solid $palette-color-3;
+  outline: 2px solid $palette-color-3;
   box-shadow: 0px 0px 111px 1px rgba(0, 0, 0, 0.8);
+  outline-offset: -1px;
   // transition: box-sh
 }
 
