--- a/admin/scss/rexlive/rexbuilder-live/views/_builderL.scss
+++ b/admin/scss/rexlive/rexbuilder-live/views/_builderL.scss
@@ -30,9 +30,9 @@
 //   // cursor: pointer;
 // }
 
-.backend-edited .collapse-grid {
-  display: none;
-}
+// .backend-edited .collapse-grid {
+//   display: none;
+// }
 
 .tool-button.tool-button--flat {
   &.collapse-grid {
